# NNDescent.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NNDescent-stdout.docx  README.md  ToDos.md
Experiemental/: VisualizationDataGen.cpp
Experimental/: BinaryTree.cpp
Old/: Algorithm.hpp
Pareto-Plot/: Pareto-Front-Search.py
ext/: CMakeLists.txt
src/: CMakeLists.txt  DualVector.cpp  IntegrationTestUtilities.hpp  MNISTData.cpp  MNISTData.hpp  MemoryResourceTest.cpp  RPTree-Refactor.cpp  TestIndexBuild.cpp  UnevenBlockTest.cpp  VertexCacheTest.cpp  benchmark.cpp  nndescent.cpp  normBenchmark.cpp  parallelizationTesting.cpp  rando-testing.cpp  recursion-testing.cpp  search.cpp  searchTesting.cpp
src/NND/: Algorithm.hpp  BlockwiseAlgorithm.hpp  DataStructures.hpp  FunctorErasure.hpp  FunctorErasureOld.hpp  GraphInitialization.hpp  GraphStructures.hpp  Index.hpp  MemoryInternals.hpp  MetaGraph.hpp  MetricHelpers.hpp  RNG.hpp  Search.hpp  SearchContexts.hpp  SpaceMetrics.hpp  SubGraphQuerying.hpp  Type.hpp  UtilityFunctions.hpp
src/NND/GraphStructures/: CachableVertex.hpp  CachingFunctor.hpp  DirectedGraph.hpp  Graph.hpp  GraphVertex.hpp  UndirectedGraph.hpp
src/NND/Parallel-Algorithm/: FreeFunctions.hpp  GraphComparisonTask.hpp  GraphUpdateTask.hpp  InitJoinTask.hpp  NearestNodesTask.hpp  ParallelizationObjects.hpp
src/Parallelization/: AsyncQueue.hpp  AtomicUniquePtr.hpp  HashLock.hpp  TaskQueuer.hpp  ThreadPool.hpp
src/RP-Tree-Refactor/: Forest.hpp
src/RPTrees/: Forest.hpp  SplittingScheme.hpp
src/Utilities/: Data.hpp  DataBlock.hpp  DataDeserialization.hpp  DataSerialization.hpp  DelayConstruct.hpp  MemoryResources.hpp  MultiTransform.hpp  PointerManipulation.hpp  SIMD.hpp  TemplateManipulation.hpp  Type.hpp  UniqueFunction.hpp
src/Utilities/Data/: DataBlock.hpp  DataSet.hpp  UnevenBlock.hpp
src/Utilities/Metrics/: Angular.hpp  Euclidean.hpp  FunctorErasure.hpp  SpaceMetrics.hpp  UnalignedEuclidean.hpp
